# rootcanal

./: .bazelrc  .gitignore  .gitmodules  BUILD  BUILD.fmtlib  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  config.proto  rustfmt.toml
.github/workflows/: avatar.yml  build.yml  publish.yml
data/: controller_properties.json
desktop/: root_canal_main.cc  test_environment.cc  test_environment.h
emulator/src/: log.cc
include/: log.h  pcap.h  phy.h
include/crypto/: crypto.h
include/hci/: address.h  address_with_type.h  class_of_device.h  pcap_filter.h
include/os/: log.h
lib/: log.cc
lib/crypto/: crypto.cc
lib/hci/: address.cc  class_of_device.cc  pcap_filter.cc
lmp/: Cargo.toml  build.rs  lmp_packets.pdl
lmp/src/: ec.rs  either.rs  ffi.rs  lib.rs  manager.rs  packets.rs
lmp/src/procedure/: authentication.rs  encryption.rs  features.rs  legacy_pairing.rs  mod.rs  secure_simple_pairing.rs
lmp/src/test/: context.rs  sequence.rs
lmp/test/ENC/: BV-05-C.in
lmp/test/SP/: BV-05-C.in  BV-06-C.in  BV-07-C.in  BV-08-C.in  BV-09-C.in  BV-10-C.in  BV-11-C.in  BV-12-C.in  BV-13-C.in  BV-19-C.in  BV-21-C.in  BV-23-C.in  BV-24-C.in  BV-26-C.in  BV-27-C.in  BV-32-C.in  BV-36-C.in
model/controller/: acl_connection.cc  acl_connection.h  acl_connection_handler.cc  acl_connection_handler.h  bredr_controller.cc  bredr_controller.h  connected_isochronous_group.h  connected_isochronous_stream.h  connection_handle.h  controller_properties.cc  controller_properties.h  dual_mode_controller.cc  dual_mode_controller.h  dual_mode_controller_python3.cc  ffi.cc  ffi.h  isochronous_connection_handler.cc  isochronous_connection_handler.h  le_acl_connection.cc  le_acl_connection.h  le_advertiser.cc  le_advertiser.h  le_controller.cc  le_controller.h  le_cs_parameters.h  link_layer_controller.cc  link_layer_controller.h  sco_connection.cc  sco_connection.h  security_manager.cc  security_manager.h
model/controller/vendor_commands/: csr.h  le_apcf.cc  le_apcf.h
model/devices/: baseband_sniffer.cc  baseband_sniffer.h  beacon.cc  beacon.h  beacon_swarm.cc  beacon_swarm.h  broken_adv.cc  broken_adv.h  car_kit.cc  car_kit.h  classic.cc  classic.h  device.cc  device.h  device_properties.cc  device_properties.h  h4_data_channel_packetizer.cc  h4_data_channel_packetizer.h  h4_packetizer.cc  h4_parser.cc  h4_parser.h  hci_device.cc  hci_device.h  hci_socket_device.cc  hci_socket_device.h  keyboard.cc  keyboard.h  link_layer_socket_device.cc  link_layer_socket_device.h  loopback.cc  loopback.h  remote_loopback_device.cc  remote_loopback_device.h  scripted_beacon.cc  scripted_beacon.h  scripted_beacon_ble_payload.proto  sniffer.cc  sniffer.h
model/hci/: h4.h  h4_data_channel_packetizer.cc  h4_data_channel_packetizer.h  h4_packetizer.cc  h4_packetizer.h  h4_parser.cc  h4_parser.h  hci_protocol.cc  hci_protocol.h  hci_sniffer.cc  hci_sniffer.h  hci_socket_transport.cc  hci_socket_transport.h  hci_transport.h
model/setup/: async_manager.cc  async_manager.h  device_boutique.cc  device_boutique.h  phy_device.cc  phy_device.h  phy_layer.cc  phy_layer.h  phy_layer_factory.cc  phy_layer_factory.h  test_channel_transport.cc  test_channel_transport.h  test_command_handler.cc  test_command_handler.h  test_model.cc  test_model.h
net/: async_data_channel.h  async_data_channel_connector.h  async_data_channel_server.h
net/posix/: posix_async_socket.cc  posix_async_socket.h  posix_async_socket_connector.cc  posix_async_socket_connector.h  posix_async_socket_server.cc  posix_async_socket_server.h
packets/: BUILD  bredr_bb.pdl  hci_packets.pdl  link_layer_packets.pdl
packets/hci/: hci_packets.pdl
proto/: Android.bp
proto/rootcanal/: configuration.proto
py/: README.md  bluetooth.py  controller.py  make_wheel.sh  pyproject.toml
py/src/rootcanal/: __about__.py  __main__.py  binaries.py  bluetooth.py  controller.py
rust/: BUILD  Cargo.toml  build.rs  cbindgen.toml  hci_packets.pdl  link_layer_packets.pdl  llcp_packets.pdl
rust/cargo/: BUILD.bazel  crates.bzl
rust/cargo/remote/: BUILD.autocfg-1.1.0.bazel  BUILD.bytes-1.4.0.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.getrandom-0.2.10.bazel  BUILD.libc-0.2.147.bazel  BUILD.num-bigint-0.4.3.bazel  BUILD.num-derive-0.3.3.bazel  BUILD.num-integer-0.1.45.bazel  BUILD.num-traits-0.2.15.bazel  BUILD.paste-1.0.12.bazel  BUILD.pin-utils-0.1.0.bazel  BUILD.ppv-lite86-0.2.17.bazel  BUILD.proc-macro2-1.0.63.bazel  BUILD.quote-1.0.28.bazel  BUILD.rand-0.8.5.bazel  BUILD.rand_chacha-0.3.1.bazel  BUILD.rand_core-0.6.4.bazel  BUILD.syn-1.0.109.bazel  BUILD.syn-2.0.22.bazel  BUILD.thiserror-1.0.40.bazel  BUILD.thiserror-impl-1.0.40.bazel  BUILD.unicode-ident-1.0.9.bazel  BUILD.wasi-0.11.0+wasi-snapshot-preview1.bazel
rust/include/: lmp.h  rootcanal_rs.h
rust/src/: either.rs  ffi.rs  future.rs  lib.rs  packets.rs
rust/src/llcp/: iso.rs  manager.rs  mod.rs
rust/src/lmp/: ec.rs  manager.rs  mod.rs
rust/test/ENC/: BV-01-C.in  BV-26-C.in  BV-34-C.in
rust/test/SP/: BV-03-C.in  BV-04-C.in  BV-05-C.in  BV-06-C.in  BV-07-C.in  BV-08-C.in  BV-09-C.in  BV-10-C.in  BV-11-C.in  BV-12-C.in  BV-13-C.in  BV-14-C.in  BV-14bis-C.in  BV-15-C.in  BV-15bis-C.in  BV-16-C.in  BV-17-C.in  BV-18-C.in  BV-19-C.in  BV-20-C.in  BV-21-C.in  BV-22-C.in  BV-23-C.in  BV-25-C.in  BV-30-C.in  BV-31-C.in  BV-32-C.in  BV-33-C.in  BV-34-C.in  BV-35-C.in  BV-36-C.in
scripts/: build_and_run.sh  controller_info.py  hci_socket.py  link_layer_socket.py  send_simple_commands.py  simple_link_layer_socket.py  simple_stack.py  test_channel.py
scripts/scripted_beacon_test/: Readme.txt  add_beacons  no_permission.pb  run_test.sh  start_scan
test/: async_manager_unittest.cc  controller_test.py  h4_parser_unittest.cc  invalid_packet_handler_unittest.cc  main.py  pcap_filter_unittest.cc  posix_socket_unittest.cc  security_manager_unittest.cc
test/HCI/: rootcanal_vendor_commands.py
test/LL/: cig_reconfiguration.py  cis_disconnection.py  connection_keepalive.py  le_encryption.py  scan_collision.py  scan_concurrency.py  scan_timeout.py
test/LMP/: connection_keepalive.py  page_collision.py
(+101 files in other folders)
